# OpenCV-Edge-Detector

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/nachiket/opencvedgedetector/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_gl.cpp  opencvedgedetector.cpp
app/src/main/java/com/nachiket/opencvedgedetector/: CameraManager.java  MainActivity.java  MyGLSurfaceView.java  MyRenderer.java  NativeRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nachiket/opencvedgedetector/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
